--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
