--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
+    "native-base": "^3.4.9",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-svg": "^12.4.3",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
