--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "^3.15.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.4.3",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
