--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.4.3",
     "react-native-toast-message": "^2.1.5",
